
bin_PROGRAMS = mypdfsearch

mypdfsearch_SOURCES = main.c mytime.c vlEncoding.c vlRedBlackTrees.c myTree.c myGenHashTable.c myInitPredefCMapHT.c myinitarray.c myoctal.c myTernarySearchTree.c myScopeHashTable.c myobjrefqueuelist.c mydictionaryqueuelist.c mystringqueuelist.c mycontentqueuelist.c mynumstacklist.c myintqueuelist.c mydecode.c scanner.c parser.c mytime.h vlEncoding.h vlRedBlackTrees.h myTree.h myGenHashTable.h myInitPredefCMapHT.h mycontentqueuelist.h mydecode.h mydictionaryqueuelist.h myintqueuelist.h mynumstacklist.h myobjrefqueuelist.h myoctal.h mypdfsearch.h myScopeHashTable.h mystringqueuelist.h myTernarySearchTree.h parser.h scanner.h

#mypdfsearch_CFLAGS = -Wall -W -pedantic -O3 -Wno-overlength-strings
#mypdfsearch_LDFLAGS = -lz -lm

#libmyoptParser_la_CFLAGS = -Wall -W -pedantic -O3
#include_HEADERS = myoptParser.h

ACLOCAL_AMFLAGS = -I m4 --install
#EXTRA_DIST = m4/NOTES
